--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-logo {
@@ -34,5 +37,15 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 1200px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1440px !important;
   }
 }
